--- a/src/Components/Header/css/MainHeader.css
+++ b/src/Components/Header/css/MainHeader.css
@@ -1,13 +1,25 @@
 body {
     width: 100%;
-    background-color: #121327;
 }
 
 .Header{
-    height: 600px;
+    height: 640px;
 }
 
-.Navigation{
+.Header::after{
+    width: 100%;
+    height: 100%;
+    content: "";
+    background-image: url("https://cr.lnwfile.com/_/cr/_raw/1f/cg/x2.jpg");
+    background-size: 100%;
+    position: absolute;
+    top:0;
+    left: 0;
+    opacity: 0.75;
+    z-index: -1;
+}
+
+.TopHeader{
     text-align: center;
 }
 
@@ -24,7 +36,7 @@ body {
 
 .Searchbar{
     position: relative;
-    top: 90px;
+    top: 80px;
 }
 
 .main{
@@ -35,7 +47,7 @@ body {
 .main-text{
     color: white;
     font-size: 27px;
-    font-weight: 800;
+    font-weight: 400;
     text-align: center;
     position: relative;
     top: 200px;
