--- a/src/Components/Main/css/BottomSection.css
+++ b/src/Components/Main/css/BottomSection.css
@@ -15,6 +15,17 @@
     margin-bottom: 20px;
 }
 
+.Button-blue{
+    color: white;
+    font-size: 17px;
+    background-color: #3498db;
+    position: relative;
+    border: none;
+    border-radius: 2px;
+    padding: 15px 30px 15px 30px;
+    text-align: center;
+}
+
 .Button-default{
     color: black;
     font-size: 17px;
